Fix Brightness reduction/blue-light reduction filter on Firefox mobile

--- a/src/css/content.less
+++ b/src/css/content.less
@@ -342,7 +342,8 @@ div#pageShadowBrightness {
     background-color: black !important;
     min-height: 100%;
     min-width: 100%;
-    height: auto;
+    width: 100vw;
+    height: 100vh;
     z-index: 2147483647;
     margin: 0 !important;
     padding: 0 !important;
@@ -356,7 +357,8 @@ div#pageShadowBrightnessNightMode {
     left: 0;
     min-height: 100%;
     min-width: 100%;
-    height: auto;
+    width: 100vw;
+    height: 100vh;
     z-index: 2147483647;
     margin: 0 !important;
     padding: 0 !important;
